add more robust navbar toggle, numbered tabs and hide tabbar when only 1 tab visible

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,3 +1,10 @@
+/*
+If using ~/.config/firefox directory, run a command like:
+ln -s ~/.config/firefox/userChrome.css ~/.mozilla/firefox/i2a99ik9.default-release/chrome/
+to symlink the files to your mozilla directory
+*/
+
+/* No more rounded borders! */
 * {
   border-radius: 0 !important;
 }
@@ -5,7 +12,7 @@
 /* I use tree style tabs to see tabs and switch tabs using tridactyl */
 /* #TabsToolbar {display:none !important} */
 
-/* disable some unnecessary UI */
+/* [ DISABLE SOME UNNECESSARY UI ] */
 #forward-button {display:none !important}
 #back-button {display:none !important}
 /* #scrollbutton-down {display: none !important} */
@@ -17,17 +24,21 @@
 .titlebar-buttonbox-container {display: none !important}
 .titlebar-spacer {display: none !important}
 
-/* COLLAPSE NAVBAR */
+/* [ COLLAPSE NAVBAR ] */
+/* disclaimer: you can escape the urlbar cleanly with f6, as ctrl+l with close the currently active sidebar (like sidebery or treestyletabs)*/
 /* (keep below snippet uncommented for either "effect" to work) */
+/* remove #main-window:not([titlepreface*="​"]) next to #nav-bar if you wish for the url bar to be collapsable when sidebery is open,
+and add if you don't, it will however act more like an "overlay" */
+
 /* #nav-bar { */
-/*   --navbar-margin: -40px; */
-/*   margin-top: var(--navbar-margin); */
-/*   z-index: -100; */
-/*   opacity: 0; */
-/*   transition: opacity 0.2s ease-in !important; */
+  /*--navbar-margin: -40px;*/ /* increase this value to make hover area more visible (like from -40px to 35px), looks a bit ugly though */
+  /* margin-top: var(--navbar-margin); */
+  /* z-index: -100; */
+  /* opacity: 0; */
+  /* transition: opacity 0.2s ease-in !important; */
 /* } */
 
-/* [TRANSITION FOR BOTH EFFECT] (CTRL+L and hovering url with mouse have transition effect)*/
+/* [TRANSITION FOR BOTH EFFECT] (CTRL+L or ALT+D and hovering url with mouse have transition effect)*/
 /* #navigator-toolbox:focus-within > #nav-bar, */
 /* #navigator-toolbox:hover > #nav-bar { */
 /*   margin-top: 0; */
@@ -54,19 +65,76 @@
 /*   opacity: 1; */
 /* } */
 
+/* [ HIDE TABBAR WHEN ONLY 1 TAB IS VISIBLE ] */
+#TabsToolbar{ min-height: 0px !important }
 
-/* VISUALLY HIDE FIREFOX VIEW (ACCESSIBLE WITH ALT+t+f) */
-:root:not([privatebrowsingmode], [firefoxviewhidden]) :is(toolbarbutton, toolbarpaletteitem) + #tabbrowser-tabs, :root[privatebrowsingmode]:not([firefoxviewhidden]) :is(toolbarbutton:not(#firefox-view-button), toolbarpaletteitem:not(#wrapper-firefox-view-button)) + #tabbrowser-tabs {
-	border-inline-start: 0 !important;
-	padding-inline-start: 0 !important;
-	margin-inline-start: 0 !important;
+#tabbrowser-tabs .tabbrowser-tab:only-of-type,
+#tabbrowser-tabs .tabbrowser-tab:only-of-type + #tabbrowser-arrowscrollbox-periphery + #TabsToolbar{
+  display:none !important;
+}
+
+#private-browsing-indicator-with-label,
+#TabsToolbar > .titlebar-buttonbox-container{
+  contain: strict;
+  contain-intrinsic-height: 0px;
+}
+#private-browsing-indicator-with-label{
+  contain-intrinsic-width: 136.45px; /* exact width to display private browsing label correctly*/
+}
+
+/* [ MORE "ROBUST" NAVBAR COLLAPSE ] */
+/* it will push sidebery and windows contents below the navbar when it is toggled,
+meaning it doesn't act like an overlay */
+#nav-bar {
+  -moz-box-ordinal-group: 1 !important;
+  border-top-width: 0 !important;
+}
+
+#PersonalToolbar {
+  -moz-box-ordinal-group: 2 !important;
+}
+
+#TabsToolbar {
+  -moz-box-ordinal-group: 3 !important;
+}
+
+#titlebar {
+	z-index: 101;
+	background: var(--lwt-accent-color-inactive, var(--lwt-accent-color)) !important;
+}
+
+#nav-bar {
+	z-index: -100;
+	margin-top: -45px; /* increase this value to make hover area more visible (like from -40px to 35px), looks a bit ugly though*/
+	/* transition: margin-top 0.1s ease-in !important;; */
+}
+
+#navigator-toolbox:focus-within > #nav-bar {
+	z-index: 100;
+	margin-top: 0px;
+}
+/* #navigator-toolbox:focus-within > #nav-bar, */
+/* #navigator-toolbox:hover > #nav-bar  { */
+/* 	z-index: 100; */
+/* 	margin-top: 0px; */
+/* 	transition: margin-top 0.1s ease-out !important;; */
+/* } */
+
+/* [ VISUALLY HIDE FIREFOX VIEW (ACCESSIBLE WITH ALT+t+f) ]*/
+/* :root:not([privatebrowsingmode], [firefoxviewhidden]) :is(toolbarbutton, toolbarpaletteitem) + #tabbrowser-tabs, :root[privatebrowsingmode]:not([firefoxviewhidden]) :is(toolbarbutton:not(#firefox-view-button), toolbarpaletteitem:not(#wrapper-firefox-view-button)) + #tabbrowser-tabs { */
+/* 	border-inline-start: 0 !important; */
+/* 	padding-inline-start: 0 !important; */
+/* 	margin-inline-start: 0 !important; */
+/* } */
+#tabbrowser-tabs {
+	border-left-width: 0px !important;
+	margin-left: 0px !important;
 }
 #firefox-view-button {
 	display: none !important;
 }
 
-
-/* Hide Header in tree style tabs (only when the sidebar is tree style tabs)*/
+/* [ HIDE HEADER IN TREE STYLE TABS (ONLY WHEN THE SIDEBAR IS TREE STYLE TABS) ]*/
 /* #sidebar-box[sidebarcommand=treestyletab_piro_sakura_ne_jp-sidebar-action] > #sidebar-header{   display: none; } */
 
 /* disable green indicator for pinned tabs mostly here for reference*/
@@ -78,7 +146,39 @@
 /* } */
 
 
-/* dynamic native tabbar with sidebery */
+/* [ ADD TAB COUNT ] */
+#tabbrowser-tabs{
+  counter-reset: n_tabs 0;
+}
+.tabbrowser-tab .tab-content{
+  padding-left: 2px;
+}
+.tabbrowser-tab .tab-content::before{
+  display: -moz-box;
+
+  /* PADDING INSTEAD OF MARGIN? */
+  /*  padding-right:8px; */
+
+  margin-right: 8px;
+  counter-increment: n_tabs;
+  content: counter(n_tabs);
+  color: #e9a058;
+  /* FOR ROMAN STYLE */
+  /* text-decoration: underline; */
+
+  /* FOR ROMAN STYLE */
+  /* text-decoration: overline underline; */
+
+  /* FOR BRACKET STYLE NUMBERS */
+  /* content: "[" counter(n_tabs) "]"; */
+
+  /* FOR BOX STYLE NUMBERS */
+  /* content: counter(n_tabs); */
+  /* border: 1px solid #444444; */
+  /* padding:0 4px; */
+}
+
+/* [ DYNAMIC NATIVE TABBAR WITH SIDEBERY  ]*/
 #main-window #TabsToolbar{
   overflow: hidden;
 }
@@ -91,6 +191,7 @@
 /* Hidden state: Fix z-index of active pinned tabs */
 #main-window[titlepreface*="​"] #tabbrowser-tabs { z-index: 0 !important; }
 
+/* hide header in sideberry */
 #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"] #sidebar-header {
   display: none;
 }
